  result in smallish eventual returned automata.  (Robert Muir, Mike McCandless)

* LUCENE-9983: Stop sorting determinize powersets unnecessarily. (Patrick Zhai)

* LUCENE-9177: ICUNormalizer2CharFilter no longer requires normalization-inert
  characters as boundaries for incremental processing, vastly improving worst-case
  performance. (Michael Gibney)

Optimizations
---------------------

* LUCENE-9996: Improved memory efficiency of IndexWriter's RAM buffer, in
  particular in the case of many fields and many indexing threads.
  (Adrien Grand)

* LUCENE-10022: Rewrite empty DisjunctionMaxQuery to MatchNoDocsQuery.
  (David Harsha via Julie Tibshirani)

* LUCENE-10031: Slightly faster segment merging for sorted indices.
  (Adrien Grand)

Bug Fixes
---------------------

* LUCENE-9988: Fix DrillSideways correctness bug introduced in LUCENE-9944 (Greg Miller)

* LUCENE-9999: CombinedFieldQuery can fail with an exception when document
  is missing some fields. (Jim Ferenczi, Julie Tibshirani)

* LUCENE-10020: DocComparator should not skip docs with the same docID on
  multiple sorts with search after (Mayya Sharipova, Julie Tibshirani)

* LUCENE-10026: Fix CombinedFieldQuery equals and hashCode, which ensures
  query rewrites don't drop CombinedFieldQuery clauses. (Julie Tibshirani)

* LUCENE-10039: Correct CombinedFieldQuery scoring when there is a single
  field. (Julie Tibshirani)

Other
---------------------

======================= Lucene 8.9.0 =======================

API Changes
---------------------

* LUCENE-9680: Removed deprecation warning from IndexWriter#getFieldNames(). (Oren Ovadia)

New Features
---------------------

* LUCENE-9575: PatternTypingFilter has been added to allow setting a type attribute on tokens based on
  a configured set of regular expressions (Gus Heck).

* LUCENE-9572: TypeAsSynonymFilter has been enhanced support ignoring some types, and to allow