@@ -55,6 +55,9 @@ Improvements
   characters as boundaries for incremental processing, vastly improving worst-case
   performance. (Michael Gibney)
 
+* LUCENE-10030: Lazily evaluate score in DrillSidewaysScorer.doQueryFirstScoring
+  (Grigoriy Troitskiy)
+
 Optimizations
 ---------------------
 
